add statement and role management